# crewai-intelligent-builder

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  intelligent_crew_runner.py  package-lock.json  package.json  project_improver.py  pyproject.toml  requirements-dev.txt  requirements.txt  task_designer_agent.py
.github/: CLAUDE_CODE_SETUP.md  dependabot.yml
.github/workflows/: claude-code.yml  quality-python.yml
